--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ AWS_REGION=us-east-1
 AWS_ACCESS_KEY_ID=my-access-key
 AWS_SECRET_ACCESS_KEY=my-secret-access-key
 BUCKET_NAME=my-bucket-name
+OPENAI_API_KEY=my-openai-key
