--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,6 +72,18 @@ services:
     volumes:
       - opensearch_data:/usr/share/opensearch/data
 
+  opensearch-dashboards:
+    image: opensearchproject/opensearch-dashboards:2.11.0
+    ports:
+      - "5601:5601"
+    environment:
+      - OPENSEARCH_HOSTS=["http://opensearch:9200"]
+      - DISABLE_SECURITY_DASHBOARDS_PLUGIN=true
+    depends_on:
+      - opensearch
+    networks:
+      - backend-network
+
 networks:
   backend-network:
     driver: bridge
